# Housing-Perales-Sean

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 746288b72dd7_create_houses_table.py
app/: database.py  main.py  models.py  schemas.py
app/routers/: houses.py
